--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Create test database
         run: |
           mysql -uroot -proot < databases/create_databases.sql
+          sudo /etc/init.d/mysql start
           ./gradlew testMigrate
       - name: Build with Gradle
         run: ./gradlew clean build
