--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -180,6 +180,8 @@ jobs:
           cf auth
           cf target -o "$CF_ORG" -s "$CF_SPACE"
           ./gradlew cfMigrate
+      - name: Build with Gradle
+          run: ./gradlew build
         env:
           CF_API_URL: ${{ secrets.CF_API_URL }}
           CF_ORG: ${{ secrets.CF_ORG }}
