--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,8 +17,8 @@ jobs:
         run: chmod +x ./gradlew
       - name: Startup test database instance
         run: |
-           sudo service mysql start
-           sudo /etc/init.d/mysql start
+          sudo service mysql start
+          sudo /etc/init.d/mysql start
       - name: Create test database
         run: |
           mysql -uroot -proot < databases/create_databases.sql
@@ -174,6 +174,8 @@ jobs:
           echo "deb https://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
           sudo apt-get update
           sudo apt-get install cf-cli
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Migate tracker-database
         run: |
           cf api "$CF_API_URL"
