--- a/applications/backlog-server/src/main/resources/application.properties
+++ b/applications/backlog-server/src/main/resources/application.properties
@@ -13,7 +13,7 @@ resilience4j.circuitbreaker.configs.default.register-health-indicator=true
 
 
 management.endpoint.health.show-details=always
-management.health.circuitbreakers.enabled: true
+management.health.circuitbreakers.enabled= true
 management.health.hystrix.enabled=false
 management.endpoints.web.exposure.include=info,health,metrics,circuitbreakers
 
