--- a/applications/backlog-server/src/test/resources/application.properties
+++ b/applications/backlog-server/src/test/resources/application.properties
@@ -11,4 +11,6 @@ resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=5000
 resilience4j.circuitbreaker.configs.default.failure-rate-threshold=1
 resilience4j.circuitbreaker.configs.default.register-health-indicator=true
 
+application.oauth-enabled=false
+
 
