--- a/applications/allocations-server/src/main/resources/application.properties
+++ b/applications/allocations-server/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-
 server.port=8081
 spring.datasource.username=tracker
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker_allocations_dev?useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 registration.server.endpoint=http://registration-server
 management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=info,health,metrics,circuitbreakers,hystrix,env
-management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=info,health,metrics,circuitbreakers,env,refresh,loggers
+management.health.circuitbreakers.enabled= true
 management.health.hystrix.enabled=false
 resilience4j.circuitbreaker.configs.default.sliding-window-size=2
 resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=1
